--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       run: | 
         docker version
         # 登录阿里云镜像仓库
-        docker login --username=${{ secrets.DOCKER_HUB_USERNAME }} --password=${{ secrets.DOCKER_HUB_PASSWORD }} registry.cn-shenzhen.aliyuncs.com
+        docker login --username=${{ secrets.DOCKER_HUB_USERNAME }} --password=${{ secrets.DOCKER_HUB_PASSWORD }} hub.docker.com
         # 使用Dockerfile构建镜像
         docker build . --file Dockerfile --tag hub.docker.com/aileen5150/hanlp-jupyterlab
         # 推送镜像到镜像仓库
