--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,6 +3,9 @@ name: Docker Image CI
 on:
   push:
     branches: [ main ]
+    tags:
+      - v2
+      - v1.*
   pull_request:
     branches: [ main ]
 
